force-app/main/default/objects/sugati__Special_Offer__c/sugati__Special_Offer__c.object-meta.xml
<CustomObject>
    <label>Special Offer</label>
    <nameField>
        <displayFormat>SO-{0000000000}</displayFormat>
        <label>Special Offer ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Special Offers</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>