force-app/main/default/objects/sugati__Special_Offer__c/fields/sugati__SO_Active__c.field-meta.xml
<CustomField>
    <fullName>sugati__SO_Active__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>