force-app/main/default/objects/sugati__Special_Offer__c/fields/sugati__SO_Apply_Exclusively_to_Supplier__c.field-meta.xml
<CustomField>
    <fullName>sugati__SO_Apply_Exclusively_to_Supplier__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Apply Exclusively to Supplier</label>
    <referenceTo>sugati__Supplier__c</referenceTo>
    <relationshipLabel>Special Offers (Apply Exclusively to Supplier)</relationshipLabel>
    <relationshipName>Special_Offers</relationshipName>
    <type>Lookup</type>
</CustomField>