force-app/main/default/objects/sugati__Special_Offer__c/fields/sugati__SO_Can_Be_Manually_Added__c.field-meta.xml
<CustomField>
    <fullName>sugati__SO_Can_Be_Manually_Added__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Only applicable for Complementary offer.</description>
    <label>Can Be Manually Added</label>
    <type>Checkbox</type>
</CustomField>