force-app/main/default/objects/sugati__Special_Offer__c/fields/sugati__SO_Discount_Amount__c.field-meta.xml
<CustomField>
    <fullName>sugati__SO_Discount_Amount__c</fullName>
    <description>percentage or value based on &apos;&apos;Type&quot; field.</description>
    <inlineHelpText>percentage or value based on &apos;&apos;Type&quot; field.</inlineHelpText>
    <label>Discount Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>