force-app/main/default/objects/sugati__Special_Offer__c/fields/sugati__SO_Discount_Amount_Based_On__c.field-meta.xml
<CustomField>
    <fullName>sugati__SO_Discount_Amount_Based_On__c</fullName>
    <description>Discount Amount Based on Cost or Sell Price.</description>
    <inlineHelpText>Discount Amount Based on Cost or Sell Price.</inlineHelpText>
    <label>Discount Amount Based On</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Sell</fullName>
            </value>
            <value>
                <fullName>Cost</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>