force-app/main/default/objects/sugati__Special_Offer__c/fields/sugati__SO_Discount_Currency__c.field-meta.xml
<CustomField>
    <fullName>sugati__SO_Discount_Currency__c</fullName>
    <description>This field only applicable for Type is &apos;&apos;value off&quot;.</description>
    <formula>IF( TEXT(sugati__SO_Type__c) == &apos;value off&apos;, TEXT(CurrencyIsoCode), &apos;&apos;)</formula>
    <inlineHelpText>This field only applicable for Type is &apos;&apos;value off&quot;.</inlineHelpText>
    <label>Discount Currency</label>
    <type>Text</type>
</CustomField>