force-app/main/default/objects/sugati__Special_Offer__c/fields/sugati__SO_Discount_Relates_To__c.field-meta.xml
<CustomField>
    <fullName>sugati__SO_Discount_Relates_To__c</fullName>
    <label>Discount Relates To</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Sale Price</fullName>
            </value>
            <value>
                <fullName>Sale and Cost Price</fullName>
            </value>
            <value>
                <fullName>Cost Price</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>