force-app/main/default/objects/sugati__Special_Offer__c/fields/sugati__SO_Excluded_Special_Offer__c.field-meta.xml
<CustomField>
    <fullName>sugati__SO_Excluded_Special_Offer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>e.g: Special Offer A can&apos;t be applied together with Special Offer B.</inlineHelpText>
    <label>Excluded Special Offer</label>
    <referenceTo>sugati__Special_Offer__c</referenceTo>
    <relationshipLabel>Special Offers</relationshipLabel>
    <relationshipName>Special_Offers2</relationshipName>
    <type>Lookup</type>
</CustomField>