force-app/main/default/objects/sugati__Special_Offer__c/fields/sugati__SO_Excluded_Special_Offers__c.field-meta.xml
<CustomField>
    <fullName>sugati__SO_Excluded_Special_Offers__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>e.g: Special Offer A can&apos;t be applied together with Special Offer B or C.</inlineHelpText>
    <label>Excluded Special Offers</label>
    <referenceTo>sugati__Set_Special_Offers__c</referenceTo>
    <relationshipLabel>Special Offers</relationshipLabel>
    <relationshipName>Special_Offers</relationshipName>
    <type>Lookup</type>
</CustomField>