force-app/main/default/objects/sugati__Special_Offer__c/fields/sugati__SO_Excluded_Supplier__c.field-meta.xml
<CustomField>
    <fullName>sugati__SO_Excluded_Supplier__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Discount does not apply to this Supplier. But can be used in the combination.</description>
    <inlineHelpText>Discount does not apply to this Supplier.</inlineHelpText>
    <label>Excluded Supplier</label>
    <referenceTo>sugati__Supplier__c</referenceTo>
    <relationshipLabel>Special Offers</relationshipLabel>
    <relationshipName>Special_Offers2</relationshipName>
    <type>Lookup</type>
</CustomField>