force-app/main/default/objects/sugati__Special_Offer__c/fields/sugati__SO_Excluded_Suppliers__c.field-meta.xml
<CustomField>
    <fullName>sugati__SO_Excluded_Suppliers__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Discount does not apply to these Suppliers.</inlineHelpText>
    <label>Excluded Suppliers</label>
    <referenceTo>sugati__Set_Suppliers__c</referenceTo>
    <relationshipLabel>Special Offers</relationshipLabel>
    <relationshipName>Special_Offers1</relationshipName>
    <type>Lookup</type>
</CustomField>