force-app/main/default/objects/sugati__Special_Offer__c/fields/sugati__SO_Expiry_Date__c.field-meta.xml
<CustomField>
    <fullName>sugati__SO_Expiry_Date__c</fullName>
    <label>Expiry Date</label>
    <type>Date</type>
</CustomField>