force-app/main/default/objects/sugati__Special_Offer__c/fields/sugati__SO_Filter_Logic__c.field-meta.xml
<CustomField>
    <fullName>sugati__SO_Filter_Logic__c</fullName>
    <description>e.g., Filter 1 AND(Filter 2 OR Filter 3)</description>
    <inlineHelpText>e.g., Filter 1 AND(Filter 2 OR Filter 3) by using the number of Order field in Special Offer Rules related list. Default will be AND for all rules.</inlineHelpText>
    <label>Filter Logic</label>
    <length>255</length>
    <type>Text</type>
</CustomField>