force-app/main/default/objects/sugati__Special_Offer__c/fields/sugati__SO_Free_Extra_Item__c.field-meta.xml
<CustomField>
    <fullName>sugati__SO_Free_Extra_Item__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Free Extra Item</label>
    <referenceTo>sugati__Linked_Services_Extra_Item__c</referenceTo>
    <relationshipLabel>Special Offers</relationshipLabel>
    <relationshipName>Special_Offers1</relationshipName>
    <type>Lookup</type>
</CustomField>