force-app/main/default/objects/sugati__Special_Offer__c/fields/sugati__SO_Free_Qty__c.field-meta.xml
<CustomField>
    <fullName>sugati__SO_Free_Qty__c</fullName>
    <defaultValue>1</defaultValue>
    <label>Free Qty</label>
    <precision>16</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>