force-app/main/default/objects/sugati__Special_Offer__c/fields/sugati__SO_Free_Type__c.field-meta.xml
<CustomField>
    <fullName>sugati__SO_Free_Type__c</fullName>
    <description>only applied for Complementary record type.</description>
    <inlineHelpText>e.g: 1st Night Cost is £100. 2nd Night Cost is £150. If Free Type is &apos;&apos;Min Free&apos;&apos;, the discount will be given on 1st Night Cost is £100.</inlineHelpText>
    <label>Free Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Min free</fullName>
            </value>
            <value>
                <fullName>Max free</fullName>
            </value>
            <value>
                <fullName>Avg free</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>