force-app/main/default/objects/sugati__Special_Offer__c/fields/sugati__SO_Internal_Notes__c.field-meta.xml
<CustomField>
    <fullName>sugati__SO_Internal_Notes__c</fullName>
    <label>Internal Notes</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>