force-app/main/default/objects/sugati__Special_Offer__c/fields/sugati__SO_Name__c.field-meta.xml
<CustomField>
    <fullName>sugati__SO_Name__c</fullName>
    <label>Name</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>