force-app/main/default/objects/sugati__Special_Offer__c/fields/sugati__SO_Occupancy_Type__c.field-meta.xml
<CustomField>
    <fullName>sugati__SO_Occupancy_Type__c</fullName>
    <label>Occupancy Type</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Children</fullName>
            </value>
            <value>
                <fullName>Adults</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>