force-app/main/default/objects/sugati__Special_Offer__c/fields/sugati__SO_Resident_Offer__c.field-meta.xml
<CustomField>
    <fullName>sugati__SO_Resident_Offer__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Resident Offer</label>
    <type>Checkbox</type>
</CustomField>