force-app/main/default/objects/sugati__Special_Offer__c/fields/sugati__SO_Special_Offer_Code__c.field-meta.xml
<CustomField>
    <fullName>sugati__SO_Special_Offer_Code__c</fullName>
    <label>Special Offer Code</label>
    <length>30</length>
    <type>Text</type>
</CustomField>