force-app/main/default/objects/sugati__Special_Offer__c/fields/sugati__SO_Type__c.field-meta.xml
<CustomField>
    <fullName>sugati__SO_Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>percent off</fullName>
            </value>
            <value>
                <fullName>value off</fullName>
            </value>
            <value>
                <fullName>qty free</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>