force-app/main/default/objects/sugati__Special_Offer__c/fields/sugati__SO_Valid_From__c.field-meta.xml
<CustomField>
    <fullName>sugati__SO_Valid_From__c</fullName>
    <label>Valid From</label>
    <type>Date</type>
</CustomField>