force-app/main/default/objects/sugati__Special_Offer__c/fields/sugati__SO_Valid_To__c.field-meta.xml
<CustomField>
    <fullName>sugati__SO_Valid_To__c</fullName>
    <label>Valid To</label>
    <type>Date</type>
</CustomField>