force-app/main/default/objects/sugati__Special_Offer__c/recordTypes/sugati__Complimentary.recordType-meta.xml
<RecordType>
    <fullName>sugati__Complimentary</fullName>
    <active>true</active>
    <description>Complimentary Days Off</description>
    <label>Complimentary</label>
</RecordType>