force-app/main/default/objects/sugati__Special_Offer__c/recordTypes/sugati__Generic.recordType-meta.xml
<RecordType>
    <fullName>sugati__Generic</fullName>
    <active>true</active>
    <description>% off</description>
    <label>Generic</label>
</RecordType>