force-app/main/default/objects/sugati__Special_Offer__c/listViews/sugati__All.listView-meta.xml
<ListView>
    <fullName>sugati__All</fullName>
    <columns>NAME</columns>
    <columns>sugati__SO_Name__c</columns>
    <columns>sugati__SO_Active__c</columns>
    <columns>sugati__SO_Component__c</columns>
    <columns>sugati__SO_Type__c</columns>
    <columns>sugati__SO_Excluded_Supplier__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>